[dev] 添加串口驱动

--- a/src/main/cpp/CMakeLists.txt
+++ b/src/main/cpp/CMakeLists.txt
@@ -2,10 +2,13 @@ cmake_minimum_required(VERSION 3.4.1)
 add_compile_options(-std=c++11)
 
 include_directories(
+        /home/bing/idea/jbr/include
+        /home/bing/idea/jbr/include/linux
+
         ${CMAKE_SOURCE_DIR}/Utils/
-        {$JAVA_HOME}/include/
-        /home/bing/Downloads/idea-IC-193.6911.18/jbr/include
-        /home/bing/Downloads/idea-IC-193.6911.18/jbr/include/linux
+        {CMAKE_SOURCE_DIR}/Driver/Serial/impl/list_ports/
+        ${CMAKE_SOURCE_DIR}/Driver/Serial/impl/
+        ${CMAKE_SOURCE_DIR}/Driver/Serial/
 )
 
 set(PROJECT_SRCS
@@ -13,6 +16,11 @@ set(PROJECT_SRCS
         Utils/ElapsedTimer.cpp
         Utils/StringUtils.cpp
         yizheneng_Utils_JniLogger.cpp
+        yizheneng_Driver_SerialPort.cpp
+
+        Driver/Serial/serial.cc
+        Driver/Serial/impl/unix.cc
+        Driver/Serial/impl/list_ports/list_ports_linux.cc
 )
 
 add_library(
